YYParser.output
Terminals unused in grammar

   COMMENT
   CONSTANT_KW
   LOWER_THAN_ELSE_KW


State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: barnameh $end

    1 barnameh: PROGRAM_KW SHENASE tarifha

    2 tarifha: tarifha tarif
    3        | tarif

    4 tarif: tarifeSakhtar
    5      | tarifeMoteghayyer
    6      | tarifeTabe

    7 tarifeSakhtar: STRUCT_KW saved_identifier AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW saved_identifier AKULAD_BAZ_KW AKULAD_BASTE_KW

    9 tarifhayeMahalli: tarifhayeMahalli tarifeMoteghayyerMahdud
   10                 | tarifeMoteghayyerMahdud

   11 tarifeMoteghayyerMahdud: jens tarifhayeMoteghayyerha NOGHTE_VIRGUL

   12 jens: INT_KW
   13     | FLOAT_KW
   14     | CHAR_KW
   15     | BOOLEAN_KW

   16 tarifeMoteghayyer: jens tarifhayeMoteghayyerha NOGHTE_VIRGUL

   17 tarifhayeMoteghayyerha: tarifeMeghdareAvalie
   18                       | tarifhayeMoteghayyerha COMMA tarifeMeghdareAvalie

   19 tarifeMeghdareAvalie: tarifeShenaseMoteghayer
   20                     | tarifeShenaseMoteghayer EQUAL_KW ebarateSade

   21 tarifeShenaseMoteghayer: saved_identifier
   22                        | saved_identifier BRACKET_BAZ_KW saved_integer BRACKET_BASTE_KW

   23 function_input: vorudiha PARANTHESIS_BASTE_KW

   24 function_name: saved_identifier PARANTHESIS_BAZ_KW

   25 tarifeTabe: jens function_name function_input jomle
   26           | jens function_name PARANTHESIS_BASTE_KW jomle
   27           | function_name function_input jomle
   28           | function_name PARANTHESIS_BASTE_KW jomle

   29 vorudiha: vorudiha NOGHTE_VIRGUL jensVorudiha
   30         | jensVorudiha

   31 jensVorudiha: jens shenaseyeVorudiha

   32 shenaseyeVorudiha: shenaseyeVorudiha COMMA shenaseyeVorudi
   33                  | shenaseyeVorudi

   34 shenaseyeVorudi: saved_identifier
   35                | saved_identifier BRACKET_BAZ_KW BRACKET_BASTE_KW

   36 jomle: matched N
   37      | unmatched

   38 otherjomle: jomleyeMorakkab
   39           | jomleyeEbarat
   40           | jomleyeEntekhab
   41           | jomleyeTekrar
   42           | jomleyeBazgasht
   43           | jomleyeShekast

   44 jomleyeMorakkab: AKULAD_BAZ_KW tarifhayeMahalli jomleha AKULAD_BASTE_KW
   45                | AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
   46                | AKULAD_BAZ_KW jomleha AKULAD_BASTE_KW
   47                | AKULAD_BAZ_KW AKULAD_BASTE_KW

   48 jomleha: jomleha M jomle
   49        | jomle

   50 jomleyeEbarat: ebarat NOGHTE_VIRGUL M
   51              | NOGHTE_VIRGUL M

   52 matched: IF_KW ebarateSade THEN_KW M matched N ELSE_KW M matched
   53        | otherjomle

   54 unmatched: IF_KW ebarateSade THEN_KW M matched N ELSE_KW M unmatched
   55          | IF_KW ebarateSade THEN_KW M jomle

   56 jomleyeEntekhab: KEY_KW PARANTHESIS_BAZ_KW ebarateRiaziManteghi PARANTHESIS_BASTE_KW N onsoreHalat onsorePishfarz END_KW
   57                | KEY_KW PARANTHESIS_BAZ_KW ebarateRiaziManteghi PARANTHESIS_BASTE_KW N onsoreHalat END_KW

   58 onsoreHalat: SWITCH_KW M saved_integer N DONOGHTE_KW M jomle
   59            | onsoreHalat SWITCH_KW M saved_integer N DONOGHTE_KW M jomle

   60 onsorePishfarz: DEFAULT_KW DONOGHTE_KW M jomle N

   61 jomleyeTekrar: WHILE_KW PARANTHESIS_BAZ_KW M ebarateSade PARANTHESIS_BASTE_KW M jomle

   62 jomleyeBazgasht: RETURN_KW M NOGHTE_VIRGUL
   63                | RETURN_KW ebarat NOGHTE_VIRGUL

   64 jomleyeShekast: BREAK_KW M NOGHTE_VIRGUL

   65 ebarat: taghirpazir EQUAL_KW ebarat
   66       | taghirpazir PLUS_EQUAL_KW ebarat
   67       | taghirpazir MINUS_EQUAL_KW ebarat
   68       | taghirpazir MULTIPLY_EQUAL_KW ebarat
   69       | taghirpazir DEVIDE_EQUAL_KW ebarat
   70       | taghirpazir PLUS_PLUS_KW
   71       | taghirpazir MINUS_MINUS_KW
   72       | ebarateSade

   73 ebarateSade: ebarateSade OR_KW M ebarateSade
   74            | ebarateSade AND_KW M ebarateSade
   75            | ebarateSade OR_ELSE_KW M ebarateSade
   76            | ebarateSade AND_THEN_KW M ebarateSade
   77            | NOT_KW ebarateSade
   78            | ebarateRabetei

   79 ebarateRabetei: ebarateRiaziManteghi
   80               | ebarateRiaziManteghi LESS_THAN_KW ebarateRiaziManteghi
   81               | ebarateRiaziManteghi LESS_EQUAL_KW ebarateRiaziManteghi
   82               | ebarateRiaziManteghi MORE_THAN_KW ebarateRiaziManteghi
   83               | ebarateRiaziManteghi MORE_EQUAL_KW ebarateRiaziManteghi
   84               | ebarateRiaziManteghi EQUAL_EQUAL_KW ebarateRiaziManteghi

   85 ebarateRiaziManteghi: ebarateYegani
   86                     | ebarateRiaziManteghi ADD_KW ebarateRiaziManteghi
   87                     | ebarateRiaziManteghi MINUS_KW ebarateRiaziManteghi
   88                     | ebarateRiaziManteghi MULTIPLY_KW ebarateRiaziManteghi
   89                     | ebarateRiaziManteghi DEVIDE_KW ebarateRiaziManteghi
   90                     | ebarateRiaziManteghi MOD_KW ebarateRiaziManteghi

   91 ebarateYegani: amalgareYegani ebarateYegani
   92              | amel

   93 amalgareYegani: MINUS_KW
   94               | MULTIPLY_KW
   95               | QUESTION_KW

   96 amel: taghirpazir
   97     | taghirnapazir

   98 taghirpazir: saved_identifier
   99            | taghirpazir BRACKET_BAZ_KW ebarat BRACKET_BASTE_KW
  100            | taghirpazir NOGHTE_KW saved_identifier

  101 taghirnapazir: PARANTHESIS_BAZ_KW ebarat PARANTHESIS_BASTE_KW
  102              | sedaZadan
  103              | meghdareSabet

  104 sedaZadan: saved_identifier PARANTHESIS_BAZ_KW bordareVorudiha PARANTHESIS_BASTE_KW
  105          | saved_identifier PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW

  106 bordareVorudiha: bordareVorudiha COMMA ebarat
  107                | ebarat

  108 meghdareSabet: saved_integer
  109              | saved_real
  110              | saved_char
  111              | saved_boolean

  112 saved_identifier: SHENASE
  113                 | MAIN_KW

  114 saved_integer: ADAD

  115 saved_real: ADAD_ASHARI

  116 saved_char: HARFE_SABET

  117 saved_boolean: TRUE_KW
  118              | FALSE_KW

  119 M: /* empty */

  120 N: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258)
FLOAT_KW (259) 13
INT_KW (260) 12
BOOLEAN_KW (261) 15
CHAR_KW (262) 14
AKULAD_BAZ_KW (263) 7 8 44 45 46 47
AKULAD_BASTE_KW (264) 7 8 44 45 46 47
ADD_KW (265) 86
SWITCH_KW (266) 58 59
END_KW (267) 56 57
DEFAULT_KW (268) 60
BREAK_KW (269) 64
RETURN_KW (270) 62 63
COMMA (271) 18 32 106
PROGRAM_KW (272) 1
STRUCT_KW (273) 7 8
CONSTANT_KW (274)
IF_KW (275) 52 54 55
THEN_KW (276) 52 54 55
ELSE_KW (277) 52 54
AND_KW (278) 74
OR_KW (279) 73
NOT_KW (280) 77
WHILE_KW (281) 61
NOGHTE_VIRGUL (282) 11 16 29 50 51 62 63 64
ADAD (283) 114
SHENASE (284) 1 112
HARFE_SABET (285) 116
KEY_KW (286) 56 57
MORE_THAN_KW (287) 82
NOGHTE_KW (288) 100
MULTIPLY_KW (289) 88 94
BRACKET_BASTE_KW (290) 22 35 99
BRACKET_BAZ_KW (291) 22 35 99
PARANTHESIS_BASTE_KW (292) 23 26 28 56 57 61 101 104 105
PARANTHESIS_BAZ_KW (293) 24 56 57 61 101 104 105
TRUE_KW (294) 117
QUESTION_KW (295) 95
EQUAL_EQUAL_KW (296) 84
EQUAL_KW (297) 20 65
DEVIDE_KW (298) 89
DEVIDE_EQUAL_KW (299) 69
OR_ELSE_KW (300) 75
FALSE_KW (301) 118
AND_THEN_KW (302) 76
MINUS_KW (303) 87 93
DONOGHTE_KW (304) 58 59 60
LESS_EQUAL_KW (305) 81
MOD_KW (306) 90
LESS_THAN_KW (307) 80
MORE_EQUAL_KW (308) 83
PLUS_EQUAL_KW (309) 66
PLUS_PLUS_KW (310) 70
MINUS_MINUS_KW (311) 71
MINUS_EQUAL_KW (312) 67
MULTIPLY_EQUAL_KW (313) 68
ADAD_ASHARI (314) 115
MAIN_KW (315) 113
LOWER_THAN_ELSE_KW (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
barnameh (63)
    on left: 1, on right: 0
tarifha (64)
    on left: 2 3, on right: 1 2
tarif (65)
    on left: 4 5 6, on right: 2 3
tarifeSakhtar (66)
    on left: 7 8, on right: 4
tarifhayeMahalli (67)
    on left: 9 10, on right: 7 9 44 45
tarifeMoteghayyerMahdud (68)
    on left: 11, on right: 9 10
jens (69)
    on left: 12 13 14 15, on right: 11 16 25 26 31
tarifeMoteghayyer (70)
    on left: 16, on right: 5
tarifhayeMoteghayyerha (71)
    on left: 17 18, on right: 11 16 18
tarifeMeghdareAvalie (72)
    on left: 19 20, on right: 17 18
tarifeShenaseMoteghayer (73)
    on left: 21 22, on right: 19 20
function_input (74)
    on left: 23, on right: 25 27
function_name (75)
    on left: 24, on right: 25 26 27 28
tarifeTabe (76)
    on left: 25 26 27 28, on right: 6
vorudiha (77)
    on left: 29 30, on right: 23 29
jensVorudiha (78)
    on left: 31, on right: 29 30
shenaseyeVorudiha (79)
    on left: 32 33, on right: 31 32
shenaseyeVorudi (80)
    on left: 34 35, on right: 32 33
jomle (81)
    on left: 36 37, on right: 25 26 27 28 48 49 55 58 59 60 61
otherjomle (82)
    on left: 38 39 40 41 42 43, on right: 53
jomleyeMorakkab (83)
    on left: 44 45 46 47, on right: 38
jomleha (84)
    on left: 48 49, on right: 44 46 48
jomleyeEbarat (85)
    on left: 50 51, on right: 39
matched (86)
    on left: 52 53, on right: 36 52 54
unmatched (87)
    on left: 54 55, on right: 37 54
jomleyeEntekhab (88)
    on left: 56 57, on right: 40
onsoreHalat (89)
    on left: 58 59, on right: 56 57 59
onsorePishfarz (90)
    on left: 60, on right: 56
jomleyeTekrar (91)
    on left: 61, on right: 41
jomleyeBazgasht (92)
    on left: 62 63, on right: 42
jomleyeShekast (93)
    on left: 64, on right: 43
ebarat (94)
    on left: 65 66 67 68 69 70 71 72, on right: 50 63 65 66 67 68 69
    99 101 106 107
ebarateSade (95)
    on left: 73 74 75 76 77 78, on right: 20 52 54 55 61 72 73 74 75
    76 77
ebarateRabetei (96)
    on left: 79 80 81 82 83 84, on right: 78
ebarateRiaziManteghi (97)
    on left: 85 86 87 88 89 90, on right: 56 57 79 80 81 82 83 84 86
    87 88 89 90
ebarateYegani (98)
    on left: 91 92, on right: 85 91
amalgareYegani (99)
    on left: 93 94 95, on right: 91
amel (100)
    on left: 96 97, on right: 92
taghirpazir (101)
    on left: 98 99 100, on right: 65 66 67 68 69 70 71 96 99 100
taghirnapazir (102)
    on left: 101 102 103, on right: 97
sedaZadan (103)
    on left: 104 105, on right: 102
bordareVorudiha (104)
    on left: 106 107, on right: 104 106
meghdareSabet (105)
    on left: 108 109 110 111, on right: 103
saved_identifier (106)
    on left: 112 113, on right: 7 8 21 22 24 34 35 98 100 104 105
saved_integer (107)
    on left: 114, on right: 22 58 59 108
saved_real (108)
    on left: 115, on right: 109
saved_char (109)
    on left: 116, on right: 110
saved_boolean (110)
    on left: 117 118, on right: 111
M (111)
    on left: 119, on right: 48 50 51 52 54 55 58 59 60 61 62 64 73
    74 75 76
N (112)
    on left: 120, on right: 36 52 54 56 57 58 59 60


state 0

    0 $accept: . barnameh $end

    PROGRAM_KW  shift, and go to state 1

    barnameh  go to state 2


state 1

    1 barnameh: PROGRAM_KW . SHENASE tarifha

    SHENASE  shift, and go to state 3


state 2

    0 $accept: barnameh . $end

    $end  shift, and go to state 4


state 3

    1 barnameh: PROGRAM_KW SHENASE . tarifha

    FLOAT_KW    shift, and go to state 5
    INT_KW      shift, and go to state 6
    BOOLEAN_KW  shift, and go to state 7
    CHAR_KW     shift, and go to state 8
    STRUCT_KW   shift, and go to state 9
    SHENASE     shift, and go to state 10
    MAIN_KW     shift, and go to state 11

    tarifha            go to state 12
    tarif              go to state 13
    tarifeSakhtar      go to state 14
    jens               go to state 15
    tarifeMoteghayyer  go to state 16
    function_name      go to state 17
    tarifeTabe         go to state 18
    saved_identifier   go to state 19


state 4

    0 $accept: barnameh $end .

    $default  accept


state 5

   13 jens: FLOAT_KW .

    $default  reduce using rule 13 (jens)


state 6

   12 jens: INT_KW .

    $default  reduce using rule 12 (jens)


state 7

   15 jens: BOOLEAN_KW .

    $default  reduce using rule 15 (jens)


state 8

   14 jens: CHAR_KW .

    $default  reduce using rule 14 (jens)


state 9

    7 tarifeSakhtar: STRUCT_KW . saved_identifier AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW . saved_identifier AKULAD_BAZ_KW AKULAD_BASTE_KW

    SHENASE  shift, and go to state 10
    MAIN_KW  shift, and go to state 11

    saved_identifier  go to state 20


state 10

  112 saved_identifier: SHENASE .

    $default  reduce using rule 112 (saved_identifier)


state 11

  113 saved_identifier: MAIN_KW .

    $default  reduce using rule 113 (saved_identifier)


state 12

    1 barnameh: PROGRAM_KW SHENASE tarifha .
    2 tarifha: tarifha . tarif

    FLOAT_KW    shift, and go to state 5
    INT_KW      shift, and go to state 6
    BOOLEAN_KW  shift, and go to state 7
    CHAR_KW     shift, and go to state 8
    STRUCT_KW   shift, and go to state 9
    SHENASE     shift, and go to state 10
    MAIN_KW     shift, and go to state 11

    $default  reduce using rule 1 (barnameh)

    tarif              go to state 21
    tarifeSakhtar      go to state 14
    jens               go to state 15
    tarifeMoteghayyer  go to state 16
    function_name      go to state 17
    tarifeTabe         go to state 18
    saved_identifier   go to state 19


state 13

    3 tarifha: tarif .

    $default  reduce using rule 3 (tarifha)


state 14

    4 tarif: tarifeSakhtar .

    $default  reduce using rule 4 (tarif)


state 15

   16 tarifeMoteghayyer: jens . tarifhayeMoteghayyerha NOGHTE_VIRGUL
   25 tarifeTabe: jens . function_name function_input jomle
   26           | jens . function_name PARANTHESIS_BASTE_KW jomle

    SHENASE  shift, and go to state 10
    MAIN_KW  shift, and go to state 11

    tarifhayeMoteghayyerha   go to state 22
    tarifeMeghdareAvalie     go to state 23
    tarifeShenaseMoteghayer  go to state 24
    function_name            go to state 25
    saved_identifier         go to state 26


state 16

    5 tarif: tarifeMoteghayyer .

    $default  reduce using rule 5 (tarif)


state 17

   27 tarifeTabe: function_name . function_input jomle
   28           | function_name . PARANTHESIS_BASTE_KW jomle

    FLOAT_KW              shift, and go to state 5
    INT_KW                shift, and go to state 6
    BOOLEAN_KW            shift, and go to state 7
    CHAR_KW               shift, and go to state 8
    PARANTHESIS_BASTE_KW  shift, and go to state 27

    jens            go to state 28
    function_input  go to state 29
    vorudiha        go to state 30
    jensVorudiha    go to state 31


state 18

    6 tarif: tarifeTabe .

    $default  reduce using rule 6 (tarif)


state 19

   24 function_name: saved_identifier . PARANTHESIS_BAZ_KW

    PARANTHESIS_BAZ_KW  shift, and go to state 32


state 20

    7 tarifeSakhtar: STRUCT_KW saved_identifier . AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW saved_identifier . AKULAD_BAZ_KW AKULAD_BASTE_KW

    AKULAD_BAZ_KW  shift, and go to state 33


state 21

    2 tarifha: tarifha tarif .

    $default  reduce using rule 2 (tarifha)


state 22

   16 tarifeMoteghayyer: jens tarifhayeMoteghayyerha . NOGHTE_VIRGUL
   18 tarifhayeMoteghayyerha: tarifhayeMoteghayyerha . COMMA tarifeMeghdareAvalie

    COMMA          shift, and go to state 34
    NOGHTE_VIRGUL  shift, and go to state 35


state 23

   17 tarifhayeMoteghayyerha: tarifeMeghdareAvalie .

    $default  reduce using rule 17 (tarifhayeMoteghayyerha)


state 24

   19 tarifeMeghdareAvalie: tarifeShenaseMoteghayer .
   20                     | tarifeShenaseMoteghayer . EQUAL_KW ebarateSade

    EQUAL_KW  shift, and go to state 36

    $default  reduce using rule 19 (tarifeMeghdareAvalie)


state 25

   25 tarifeTabe: jens function_name . function_input jomle
   26           | jens function_name . PARANTHESIS_BASTE_KW jomle

    FLOAT_KW              shift, and go to state 5
    INT_KW                shift, and go to state 6
    BOOLEAN_KW            shift, and go to state 7
    CHAR_KW               shift, and go to state 8
    PARANTHESIS_BASTE_KW  shift, and go to state 37

    jens            go to state 28
    function_input  go to state 38
    vorudiha        go to state 30
    jensVorudiha    go to state 31


state 26

   21 tarifeShenaseMoteghayer: saved_identifier .
   22                        | saved_identifier . BRACKET_BAZ_KW saved_integer BRACKET_BASTE_KW
   24 function_name: saved_identifier . PARANTHESIS_BAZ_KW

    BRACKET_BAZ_KW      shift, and go to state 39
    PARANTHESIS_BAZ_KW  shift, and go to state 32

    $default  reduce using rule 21 (tarifeShenaseMoteghayer)


state 27

   28 tarifeTabe: function_name PARANTHESIS_BASTE_KW . jomle

    AKULAD_BAZ_KW       shift, and go to state 40
    BREAK_KW            shift, and go to state 41
    RETURN_KW           shift, and go to state 42
    IF_KW               shift, and go to state 43
    NOT_KW              shift, and go to state 44
    WHILE_KW            shift, and go to state 45
    NOGHTE_VIRGUL       shift, and go to state 46
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    KEY_KW              shift, and go to state 49
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    jomle                 go to state 57
    otherjomle            go to state 58
    jomleyeMorakkab       go to state 59
    jomleyeEbarat         go to state 60
    matched               go to state 61
    unmatched             go to state 62
    jomleyeEntekhab       go to state 63
    jomleyeTekrar         go to state 64
    jomleyeBazgasht       go to state 65
    jomleyeShekast        go to state 66
    ebarat                go to state 67
    ebarateSade           go to state 68
    ebarateRabetei        go to state 69
    ebarateRiaziManteghi  go to state 70
    ebarateYegani         go to state 71
    amalgareYegani        go to state 72
    amel                  go to state 73
    taghirpazir           go to state 74
    taghirnapazir         go to state 75
    sedaZadan             go to state 76
    meghdareSabet         go to state 77
    saved_identifier      go to state 78
    saved_integer         go to state 79
    saved_real            go to state 80
    saved_char            go to state 81
    saved_boolean         go to state 82


state 28

   31 jensVorudiha: jens . shenaseyeVorudiha

    SHENASE  shift, and go to state 10
    MAIN_KW  shift, and go to state 11

    shenaseyeVorudiha  go to state 83
    shenaseyeVorudi    go to state 84
    saved_identifier   go to state 85


state 29

   27 tarifeTabe: function_name function_input . jomle

    AKULAD_BAZ_KW       shift, and go to state 40
    BREAK_KW            shift, and go to state 41
    RETURN_KW           shift, and go to state 42
    IF_KW               shift, and go to state 43
    NOT_KW              shift, and go to state 44
    WHILE_KW            shift, and go to state 45
    NOGHTE_VIRGUL       shift, and go to state 46
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    KEY_KW              shift, and go to state 49
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    jomle                 go to state 86
    otherjomle            go to state 58
    jomleyeMorakkab       go to state 59
    jomleyeEbarat         go to state 60
    matched               go to state 61
    unmatched             go to state 62
    jomleyeEntekhab       go to state 63
    jomleyeTekrar         go to state 64
    jomleyeBazgasht       go to state 65
    jomleyeShekast        go to state 66
    ebarat                go to state 67
    ebarateSade           go to state 68
    ebarateRabetei        go to state 69
    ebarateRiaziManteghi  go to state 70
    ebarateYegani         go to state 71
    amalgareYegani        go to state 72
    amel                  go to state 73
    taghirpazir           go to state 74
    taghirnapazir         go to state 75
    sedaZadan             go to state 76
    meghdareSabet         go to state 77
    saved_identifier      go to state 78
    saved_integer         go to state 79
    saved_real            go to state 80
    saved_char            go to state 81
    saved_boolean         go to state 82


state 30

   23 function_input: vorudiha . PARANTHESIS_BASTE_KW
   29 vorudiha: vorudiha . NOGHTE_VIRGUL jensVorudiha

    NOGHTE_VIRGUL         shift, and go to state 87
    PARANTHESIS_BASTE_KW  shift, and go to state 88


state 31

   30 vorudiha: jensVorudiha .

    $default  reduce using rule 30 (vorudiha)


state 32

   24 function_name: saved_identifier PARANTHESIS_BAZ_KW .

    $default  reduce using rule 24 (function_name)


state 33

    7 tarifeSakhtar: STRUCT_KW saved_identifier AKULAD_BAZ_KW . tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW saved_identifier AKULAD_BAZ_KW . AKULAD_BASTE_KW

    FLOAT_KW         shift, and go to state 5
    INT_KW           shift, and go to state 6
    BOOLEAN_KW       shift, and go to state 7
    CHAR_KW          shift, and go to state 8
    AKULAD_BASTE_KW  shift, and go to state 89

    tarifhayeMahalli         go to state 90
    tarifeMoteghayyerMahdud  go to state 91
    jens                     go to state 92


state 34

   18 tarifhayeMoteghayyerha: tarifhayeMoteghayyerha COMMA . tarifeMeghdareAvalie

    SHENASE  shift, and go to state 10
    MAIN_KW  shift, and go to state 11

    tarifeMeghdareAvalie     go to state 93
    tarifeShenaseMoteghayer  go to state 24
    saved_identifier         go to state 94


state 35

   16 tarifeMoteghayyer: jens tarifhayeMoteghayyerha NOGHTE_VIRGUL .

    $default  reduce using rule 16 (tarifeMoteghayyer)


state 36

   20 tarifeMeghdareAvalie: tarifeShenaseMoteghayer EQUAL_KW . ebarateSade

    NOT_KW              shift, and go to state 44
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    ebarateSade           go to state 95
    ebarateRabetei        go to state 69
    ebarateRiaziManteghi  go to state 70
    ebarateYegani         go to state 71
    amalgareYegani        go to state 72
    amel                  go to state 73
    taghirpazir           go to state 96
    taghirnapazir         go to state 75
    sedaZadan             go to state 76
    meghdareSabet         go to state 77
    saved_identifier      go to state 78
    saved_integer         go to state 79
    saved_real            go to state 80
    saved_char            go to state 81
    saved_boolean         go to state 82


state 37

   26 tarifeTabe: jens function_name PARANTHESIS_BASTE_KW . jomle

    AKULAD_BAZ_KW       shift, and go to state 40
    BREAK_KW            shift, and go to state 41
    RETURN_KW           shift, and go to state 42
    IF_KW               shift, and go to state 43
    NOT_KW              shift, and go to state 44
    WHILE_KW            shift, and go to state 45
    NOGHTE_VIRGUL       shift, and go to state 46
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    KEY_KW              shift, and go to state 49
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    jomle                 go to state 97
    otherjomle            go to state 58
    jomleyeMorakkab       go to state 59
    jomleyeEbarat         go to state 60
    matched               go to state 61
    unmatched             go to state 62
    jomleyeEntekhab       go to state 63
    jomleyeTekrar         go to state 64
    jomleyeBazgasht       go to state 65
    jomleyeShekast        go to state 66
    ebarat                go to state 67
    ebarateSade           go to state 68
    ebarateRabetei        go to state 69
    ebarateRiaziManteghi  go to state 70
    ebarateYegani         go to state 71
    amalgareYegani        go to state 72
    amel                  go to state 73
    taghirpazir           go to state 74
    taghirnapazir         go to state 75
    sedaZadan             go to state 76
    meghdareSabet         go to state 77
    saved_identifier      go to state 78
    saved_integer         go to state 79
    saved_real            go to state 80
    saved_char            go to state 81
    saved_boolean         go to state 82


state 38

   25 tarifeTabe: jens function_name function_input . jomle

    AKULAD_BAZ_KW       shift, and go to state 40
    BREAK_KW            shift, and go to state 41
    RETURN_KW           shift, and go to state 42
    IF_KW               shift, and go to state 43
    NOT_KW              shift, and go to state 44
    WHILE_KW            shift, and go to state 45
    NOGHTE_VIRGUL       shift, and go to state 46
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    KEY_KW              shift, and go to state 49
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    jomle                 go to state 98
    otherjomle            go to state 58
    jomleyeMorakkab       go to state 59
    jomleyeEbarat         go to state 60
    matched               go to state 61
    unmatched             go to state 62
    jomleyeEntekhab       go to state 63
    jomleyeTekrar         go to state 64
    jomleyeBazgasht       go to state 65
    jomleyeShekast        go to state 66
    ebarat                go to state 67
    ebarateSade           go to state 68
    ebarateRabetei        go to state 69
    ebarateRiaziManteghi  go to state 70
    ebarateYegani         go to state 71
    amalgareYegani        go to state 72
    amel                  go to state 73
    taghirpazir           go to state 74
    taghirnapazir         go to state 75
    sedaZadan             go to state 76
    meghdareSabet         go to state 77
    saved_identifier      go to state 78
    saved_integer         go to state 79
    saved_real            go to state 80
    saved_char            go to state 81
    saved_boolean         go to state 82


state 39

   22 tarifeShenaseMoteghayer: saved_identifier BRACKET_BAZ_KW . saved_integer BRACKET_BASTE_KW

    ADAD  shift, and go to state 47

    saved_integer  go to state 99


state 40

   44 jomleyeMorakkab: AKULAD_BAZ_KW . tarifhayeMahalli jomleha AKULAD_BASTE_KW
   45                | AKULAD_BAZ_KW . tarifhayeMahalli AKULAD_BASTE_KW
   46                | AKULAD_BAZ_KW . jomleha AKULAD_BASTE_KW
   47                | AKULAD_BAZ_KW . AKULAD_BASTE_KW

    FLOAT_KW            shift, and go to state 5
    INT_KW              shift, and go to state 6
    BOOLEAN_KW          shift, and go to state 7
    CHAR_KW             shift, and go to state 8
    AKULAD_BAZ_KW       shift, and go to state 40
    AKULAD_BASTE_KW     shift, and go to state 100
    BREAK_KW            shift, and go to state 41
    RETURN_KW           shift, and go to state 42
    IF_KW               shift, and go to state 43
    NOT_KW              shift, and go to state 44
    WHILE_KW            shift, and go to state 45
    NOGHTE_VIRGUL       shift, and go to state 46
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    KEY_KW              shift, and go to state 49
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    tarifhayeMahalli         go to state 101
    tarifeMoteghayyerMahdud  go to state 91
    jens                     go to state 92
    jomle                    go to state 102
    otherjomle               go to state 58
    jomleyeMorakkab          go to state 59
    jomleha                  go to state 103
    jomleyeEbarat            go to state 60
    matched                  go to state 61
    unmatched                go to state 62
    jomleyeEntekhab          go to state 63
    jomleyeTekrar            go to state 64
    jomleyeBazgasht          go to state 65
    jomleyeShekast           go to state 66
    ebarat                   go to state 67
    ebarateSade              go to state 68
    ebarateRabetei           go to state 69
    ebarateRiaziManteghi     go to state 70
    ebarateYegani            go to state 71
    amalgareYegani           go to state 72
    amel                     go to state 73
    taghirpazir              go to state 74
    taghirnapazir            go to state 75
    sedaZadan                go to state 76
    meghdareSabet            go to state 77
    saved_identifier         go to state 78
    saved_integer            go to state 79
    saved_real               go to state 80
    saved_char               go to state 81
    saved_boolean            go to state 82


state 41

   64 jomleyeShekast: BREAK_KW . M NOGHTE_VIRGUL

    $default  reduce using rule 119 (M)

    M  go to state 104


state 42

   62 jomleyeBazgasht: RETURN_KW . M NOGHTE_VIRGUL
   63                | RETURN_KW . ebarat NOGHTE_VIRGUL

    NOT_KW              shift, and go to state 44
    ADAD                shift, and go to state 47
    SHENASE             shift, and go to state 10
    HARFE_SABET         shift, and go to state 48
    MULTIPLY_KW         shift, and go to state 50
    PARANTHESIS_BAZ_KW  shift, and go to state 51
    TRUE_KW             shift, and go to state 52
    QUESTION_KW         shift, and go to state 53
    FALSE_KW            shift, and go to state 54
    MINUS_KW            shift, and go to state 55
    ADAD_ASHARI         shift, and go to state 56
    MAIN_KW             shift, and go to state 11

    $default  reduce using rule 119 (M)
